--- a/index.html
+++ b/index.html
@@ -5,51 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <style>
-        #high-score {
-            margin: 5px;
-        }
-        a, a:hover {
-            color: blueviolet;
-            text-decoration: none;
-        }
-        #timer {
-            margin: 5px;
-        }
-        .content {
-            text-align: center;
-            margin-top: 150px;
-        }
-        #description {
-            margin-top: 30px;
-            padding: 0% 30%;
-        }
-        .pbtn, .pbtn:hover {
-            background-color: blueviolet;
-            color: white;
-            border: 1px solid black;
-        }
-        .answers {
-            display: block;
-            margin-bottom: 5px;
-        }
-        #answerDiv {
-            margin-top: 20px;
-        }
-        #quiz {
-            text-align: center;
-            display: none;
-            width: 33%;
-            margin-left: 33%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="high-score">
+    <div id="high-score-link">
         <a href="">View Highscores</a>
     </div>
     <div id="timer">Time: 0</div>
-    <div id = "home" class="content">
+    <div id="home" class="content">
         <h1>The JavaScript Quiz</h1>
         <p id="description">The following quiz is designed to test your current knowledge of the programming language JavaScript. Click the Start button to continue.</p>
         <button type="button" id="start" class="btn pbtn">Start</button>
@@ -62,6 +25,19 @@
             <button type="button" class="btn pbtn answers"></button>
             <button type="button" class="btn pbtn answers"></button>
         </div>
+    </div>
+    <div id="endgame" class="content">
+        <h1>Finished!</h1>
+        <p>Your final score is <span id="score"></span></p>
+        <label for="initials">Enter your initials: </label>
+        <input type="text" id="initials" name="initials">
+        <button id="submit" class="btn pbtn">Submit</button>
+    </div>
+    <div id="high-scores" class="content">
+        <h1>High Scores</h1>
+        <ol id="score-list"></ol>
+        <button id="go-back" class="btn pbtn">Go Back</button>
+        <button id="clear" class="btn pbtn">Clear High Scores</button>
     </div>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
