added comments to javascript and cleaned up code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="high-score-link">
         <a href="">View Highscores</a>
     </div>
-    <div id="timer">Time: 0</div>
+    <div id="time">Time: 0</div>
     <div id="home" class="content">
         <h1>The JavaScript Quiz</h1>
         <p id="description">The following quiz is designed to test your current knowledge of the programming language JavaScript. Click the Start button to continue.</p>
